{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 34,
  "lineage": "2d590b3a-19a8-82ea-fbca-47fa4086b486",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:security-group/sg-02a1ef820234d92e2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02a1ef820234d92e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Jenkins-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "950541037016",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:vpc-endpoint/vpce-00dbd85a50db7bb2b",
            "dns_entry": [
              {
                "dns_name": "vpce-00dbd85a50db7bb2b-8pcmyejc.ec2.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-00dbd85a50db7bb2b-8pcmyejc-ap-south-1b.ec2.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-00dbd85a50db7bb2b-8pcmyejc-ap-south-1a.ec2.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00dbd85a50db7bb2b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06414821074665479",
              "eni-0d22b189687462c0c"
            ],
            "owner_id": "950541037016",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a1ef820234d92e2"
            ],
            "service_name": "com.amazonaws.ap-south-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-0a695554b1a5f1914",
              "subnet-0c4a3c35ef5199cd5"
            ],
            "tags": {
              "Name": "ec2-vpc-endpoint"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ec2-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "module.endpoints.aws_security_group.this",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ecr.api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:vpc-endpoint/vpce-02494922bc5156fa0",
            "dns_entry": [
              {
                "dns_name": "vpce-02494922bc5156fa0-u2bst1i3.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-02494922bc5156fa0-u2bst1i3-ap-south-1b.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-02494922bc5156fa0-u2bst1i3-ap-south-1a.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02494922bc5156fa0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0173a0cca78f9efd8",
              "eni-078d920938520c693"
            ],
            "owner_id": "950541037016",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a1ef820234d92e2"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0a695554b1a5f1914",
              "subnet-0c4a3c35ef5199cd5"
            ],
            "tags": {
              "Name": "ecr.api-vpc-endpoint"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecr.api-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "module.endpoints.aws_security_group.this",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ecr.dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:vpc-endpoint/vpce-0f8977ec98e1a156f",
            "dns_entry": [
              {
                "dns_name": "vpce-0f8977ec98e1a156f-s1j0htil.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0f8977ec98e1a156f-s1j0htil-ap-south-1a.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0f8977ec98e1a156f-s1j0htil-ap-south-1b.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f8977ec98e1a156f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02123a66b1528973e",
              "eni-04f109bd4dbb07b52"
            ],
            "owner_id": "950541037016",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a1ef820234d92e2"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0a695554b1a5f1914",
              "subnet-0c4a3c35ef5199cd5"
            ],
            "tags": {
              "Name": "ecr.dkr-vpc-endpoint"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecr.dkr-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "module.endpoints.aws_security_group.this",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:vpc-endpoint/vpce-01aff95809ea3f5b6",
            "dns_entry": [
              {
                "dns_name": "vpce-01aff95809ea3f5b6-ljgj076o.ecs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-01aff95809ea3f5b6-ljgj076o-ap-south-1a.ecs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-01aff95809ea3f5b6-ljgj076o-ap-south-1b.ecs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01aff95809ea3f5b6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08ccf30b357d25184",
              "eni-0cb2eef41950ea1b3"
            ],
            "owner_id": "950541037016",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a1ef820234d92e2"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecs",
            "state": "available",
            "subnet_ids": [
              "subnet-0a695554b1a5f1914",
              "subnet-0c4a3c35ef5199cd5"
            ],
            "tags": {
              "Name": "ecs-vpc-endpoint"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "module.endpoints.aws_security_group.this",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "elasticloadbalancing",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:vpc-endpoint/vpce-0e008380c2fda7885",
            "dns_entry": [
              {
                "dns_name": "vpce-0e008380c2fda7885-eo8j8ptl.elasticloadbalancing.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0e008380c2fda7885-eo8j8ptl-ap-south-1a.elasticloadbalancing.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0e008380c2fda7885-eo8j8ptl-ap-south-1b.elasticloadbalancing.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e008380c2fda7885",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00897174e0123cfbf",
              "eni-0ffb741da7f4ccefa"
            ],
            "owner_id": "950541037016",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a1ef820234d92e2"
            ],
            "service_name": "com.amazonaws.ap-south-1.elasticloadbalancing",
            "state": "available",
            "subnet_ids": [
              "subnet-0a695554b1a5f1914",
              "subnet-0c4a3c35ef5199cd5"
            ],
            "tags": {
              "Name": "elasticloadbalancing-vpc-endpoint"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "elasticloadbalancing-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "module.endpoints.aws_security_group.this",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:vpc-endpoint/vpce-0aae4e8ce6f2431cc",
            "dns_entry": [
              {
                "dns_name": "vpce-0aae4e8ce6f2431cc-1h2jsc8n.kms.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0aae4e8ce6f2431cc-1h2jsc8n-ap-south-1b.kms.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0aae4e8ce6f2431cc-1h2jsc8n-ap-south-1a.kms.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0aae4e8ce6f2431cc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-023c6eebf51cc5624",
              "eni-0d619530aa8ee4d40"
            ],
            "owner_id": "950541037016",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a1ef820234d92e2"
            ],
            "service_name": "com.amazonaws.ap-south-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-0a695554b1a5f1914",
              "subnet-0c4a3c35ef5199cd5"
            ],
            "tags": {
              "Name": "kms-vpc-endpoint"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "kms-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "module.endpoints.aws_security_group.this",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:vpc-endpoint/vpce-00d2251647dcd97cd",
            "dns_entry": [
              {
                "dns_name": "vpce-00d2251647dcd97cd-1ly2bctg.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-00d2251647dcd97cd-1ly2bctg-ap-south-1a.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-00d2251647dcd97cd-1ly2bctg-ap-south-1b.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00d2251647dcd97cd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02b27a64d14086672",
              "eni-08ce785f678d4b0bd"
            ],
            "owner_id": "950541037016",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a1ef820234d92e2"
            ],
            "service_name": "com.amazonaws.ap-south-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-0a695554b1a5f1914",
              "subnet-0c4a3c35ef5199cd5"
            ],
            "tags": {
              "Name": "logs-vpc-endpoint"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "logs-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "module.endpoints.aws_security_group.this",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:vpc-endpoint/vpce-09b310a7a2b56e446",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09b310a7a2b56e446",
            "ip_address_type": "ipv4",
            "owner_id": "950541037016",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a1ef820234d92e2"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-vpc-endpoint"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "s3-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "module.endpoints.aws_security_group.this",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:vpc-endpoint/vpce-0788d3ba9e8e9754a",
            "dns_entry": [
              {
                "dns_name": "vpce-0788d3ba9e8e9754a-aogaxo75.sts.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0788d3ba9e8e9754a-aogaxo75-ap-south-1b.sts.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0788d3ba9e8e9754a-aogaxo75-ap-south-1a.sts.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0788d3ba9e8e9754a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-088a817ba282da150",
              "eni-0f705dfed5e04c45d"
            ],
            "owner_id": "950541037016",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a1ef820234d92e2"
            ],
            "service_name": "com.amazonaws.ap-south-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-0a695554b1a5f1914",
              "subnet-0c4a3c35ef5199cd5"
            ],
            "tags": {
              "Name": "sts-vpc-endpoint"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "sts-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "module.endpoints.aws_security_group.this",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:network-acl/acl-09e063719db3d6231",
            "default_network_acl_id": "acl-09e063719db3d6231",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09e063719db3d6231",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "950541037016",
            "subnet_ids": [
              "subnet-055ad922851d8735b",
              "subnet-0891cb5fcba219f8e",
              "subnet-0a695554b1a5f1914",
              "subnet-0c4a3c35ef5199cd5"
            ],
            "tags": {
              "Name": "Jenkins-default"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-default"
            },
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:route-table/rtb-09a6cc6933d1986c8",
            "default_route_table_id": "rtb-09a6cc6933d1986c8",
            "id": "rtb-09a6cc6933d1986c8",
            "owner_id": "950541037016",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "Jenkins-default"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:security-group/sg-07c66df4acb92f69e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07c66df4acb92f69e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "950541037016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins-default"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-default"
            },
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a7abd55804d70e6",
            "domain": "vpc",
            "id": "eipalloc-04a7abd55804d70e6",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-199-212.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.199.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Jenkins-ap-south-1a"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-ap-south-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07cabbcc68e74896b",
            "domain": "vpc",
            "id": "eipalloc-07cabbcc68e74896b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-200-79-252.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.79.252",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Jenkins-ap-south-1b"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-ap-south-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:internet-gateway/igw-05d0e4be286eb310b",
            "id": "igw-05d0e4be286eb310b",
            "owner_id": "950541037016",
            "tags": {
              "Name": "Jenkins"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins"
            },
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a7abd55804d70e6",
            "association_id": "eipassoc-02daaa79d565ecb37",
            "connectivity_type": "public",
            "id": "nat-0e3b5f1a53ba054db",
            "network_interface_id": "eni-09704ad1d64589cc9",
            "private_ip": "10.0.2.25",
            "public_ip": "43.204.199.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0891cb5fcba219f8e",
            "tags": {
              "Name": "Jenkins-ap-south-1a"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-ap-south-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07cabbcc68e74896b",
            "association_id": "eipassoc-085fafab11feafcb3",
            "connectivity_type": "public",
            "id": "nat-0b064473ebbe7eba6",
            "network_interface_id": "eni-0d38619df9b6ffc2b",
            "private_ip": "10.0.2.50",
            "public_ip": "13.200.79.252",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-055ad922851d8735b",
            "tags": {
              "Name": "Jenkins-ap-south-1b"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-ap-south-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04f1d51ee2b00522b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e3b5f1a53ba054db",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f1d51ee2b00522b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bbf09bca832cf0b01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b064473ebbe7eba6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbf09bca832cf0b0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05d0e4be286eb310b",
            "id": "r-rtb-095734590fbc2a6381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-095734590fbc2a638",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:route-table/rtb-04f1d51ee2b00522b",
            "id": "rtb-04f1d51ee2b00522b",
            "owner_id": "950541037016",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Jenkins-private-ap-south-1a"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-private-ap-south-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:route-table/rtb-0bbf09bca832cf0b0",
            "id": "rtb-0bbf09bca832cf0b0",
            "owner_id": "950541037016",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Jenkins-private-ap-south-1b"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-private-ap-south-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:route-table/rtb-095734590fbc2a638",
            "id": "rtb-095734590fbc2a638",
            "owner_id": "950541037016",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Jenkins-public"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0fd8b34a7cef50d",
            "route_table_id": "rtb-04f1d51ee2b00522b",
            "subnet_id": "subnet-0c4a3c35ef5199cd5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05738f2aebc594107",
            "route_table_id": "rtb-0bbf09bca832cf0b0",
            "subnet_id": "subnet-0a695554b1a5f1914"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fd7cfde1f8a749a",
            "route_table_id": "rtb-095734590fbc2a638",
            "subnet_id": "subnet-0891cb5fcba219f8e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05078e3e8702cfcb7",
            "route_table_id": "rtb-095734590fbc2a638",
            "subnet_id": "subnet-055ad922851d8735b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:subnet/subnet-0c4a3c35ef5199cd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4a3c35ef5199cd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950541037016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jenkins-private-ap-south-1a"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-private-ap-south-1a"
            },
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:subnet/subnet-0a695554b1a5f1914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a695554b1a5f1914",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950541037016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jenkins-private-ap-south-1b"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-private-ap-south-1b"
            },
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:subnet/subnet-0891cb5fcba219f8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0891cb5fcba219f8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950541037016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jenkins-public-ap-south-1a"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-public-ap-south-1a"
            },
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:subnet/subnet-055ad922851d8735b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055ad922851d8735b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950541037016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jenkins-public-ap-south-1b"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins-public-ap-south-1b"
            },
            "vpc_id": "vpc-059aaa144ad4e2140"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:950541037016:vpc/vpc-059aaa144ad4e2140",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-09e063719db3d6231",
            "default_route_table_id": "rtb-09a6cc6933d1986c8",
            "default_security_group_id": "sg-07c66df4acb92f69e",
            "dhcp_options_id": "dopt-5235f739",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059aaa144ad4e2140",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a6cc6933d1986c8",
            "owner_id": "950541037016",
            "tags": {
              "Name": "Jenkins"
            },
            "tags_all": {
              "App": "Jenkins",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "Jenkins"
            }
          }
        }
      ]
    }
  ]
}